--- a/app/src/main/res/layout/camp_framgnet.xml
+++ b/app/src/main/res/layout/camp_framgnet.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <com.ymca.CustomFont.PrimaryFontText
         android:id="@+id/campHeader"
@@ -15,11 +16,25 @@
         android:textColor="@color/colorScheduleBottomUnSelect"
         android:textSize="@dimen/margin_common_20"
         android:textStyle="bold"
-        app:fontName="@string/custom_primary_font" />
+        app:fontName="@string/custom_primary_font"
+        android:padding="@dimen/padding_common_10"/>
 
-    <ListView
+    <com.ymca.PullListLoader.XListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/campList"/>
-
+        android:layout_height="0dp"
+        android:layout_weight=".97"
+        android:choiceMode="singleChoice"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:smoothScrollbar="true"
+        android:dividerHeight="0dp"
+        android:id="@+id/campList"
+        android:scrollbars="none"
+        android:scrollbarStyle="insideOverlay"
+        />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".03"
+        android:background="@drawable/bottom_img" />
 </LinearLayout>
