--- a/app/src/main/res/layout/event_detail_fragment.xml
+++ b/app/src/main/res/layout/event_detail_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="1">
 
@@ -21,7 +21,7 @@
             android:textColor="@android:color/black"
             android:textSize="@dimen/text_size_common_22"
             android:textStyle="bold"
-            app:fontName="@string/custom_primary_font"/>
+            app:fontName="@string/custom_primary_font" />
 
         <com.ymca.CustomFont.SecondaryFontText
             android:layout_width="wrap_content"
@@ -31,8 +31,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_size_common_16"
             android:textStyle="bold"
-            app:fontNames="@string/custom_secondary_font"
-            />
+            app:fontNames="@string/custom_secondary_font" />
 
         <com.ymca.CustomFont.SecondaryFontText
             android:layout_width="wrap_content"
@@ -42,7 +41,7 @@
             android:text="xxxxxxxxx"
             android:textColor="@color/colorScheduleBottomSelect"
             android:textSize="@dimen/text_size_common_13"
-            app:fontNames="@string/custom_secondary_font"/>
+            app:fontNames="@string/custom_secondary_font" />
     </LinearLayout>
 
     <View
@@ -50,20 +49,32 @@
         android:layout_height="1dp"
         android:background="@color/colorGray" />
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".4"
-        android:padding="@dimen/padding_common_5">
+        android:orientation="horizontal"
+        android:weightSum="1">
+        <View
+            android:layout_width="0dp"
+            android:layout_weight=".025"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"/>
 
-        <com.ymca.CustomFont.SecondaryFontText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="I used TextViews in this example, but you can use whatever you want for the footer views. To avoid the footer items overlapping with the bottom of the menu, add some dummy items to the end of your menu resource file (these will act like spacers"
-            app:fontNames="@string/custom_secondary_font"
-            android:textSize="@dimen/text_size_common_12"
-            />
-    </ScrollView>
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_weight=".99"
+            android:layout_height="match_parent"
+            android:padding="@dimen/padding_common_5">
+
+            <com.ymca.CustomFont.SecondaryFontText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="I used TextViews in this example, but you can use whatever you want for the footer views. To avoid the footer items overlapping with the bottom of the menu, add some dummy items to the end of your menu resource file (these will act like spacers"
+                android:textSize="@dimen/text_size_common_12"
+                app:fontNames="@string/custom_secondary_font" />
+        </ScrollView>
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -79,55 +90,61 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="@dimen/padding_common_10"
+            android:padding="@dimen/padding_common_5"
             android:weightSum="1">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:orientation="horizontal"
-                android:paddingLeft="@dimen/padding_common_5">
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight=".40"-->
+            <!--android:orientation="horizontal">-->
+
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/event_detail_calendar"
-                android:background="@null"/>
-                </LinearLayout>
+                android:background="@null"
+                android:scaleType="fitCenter"
+                android:src="@drawable/event_detail_calendar" />
+            <!--</LinearLayout>-->
 
-            <LinearLayout
-                android:layout_width="0dp"
+            <!--<LinearLayout-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight=".6"-->
+            <!--android:gravity="end"-->
+            <!--android:orientation="horizontal">-->
+
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight=".5"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:layout_marginLeft="@dimen/margin_common_5"
+                android:padding="@dimen/padding_common_5"
+                android:src="@drawable/detail_share" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/padding_common_5"
-                    android:src="@drawable/detail_share" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_common_5"
+                android:padding="@dimen/padding_common_5"
+                android:src="@drawable/detail_faceook" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/padding_common_5"
-                    android:src="@drawable/detail_faceook" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_common_5"
+                android:padding="@dimen/padding_common_5"
+                android:src="@drawable/detail_twitter" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/padding_common_5"
-                    android:src="@drawable/detail_twitter" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="@dimen/padding_common_5"
-                    android:src="@drawable/detail_linkindi" />
-            </LinearLayout>
-
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_common_5"
+                android:padding="@dimen/padding_common_5"
+                android:src="@drawable/detail_linkindi" />
         </LinearLayout>
+
+
+        <!--</LinearLayout>-->
     </LinearLayout>
 
 
