--- a/app/src/main/res/layout/event_items.xml
+++ b/app/src/main/res/layout/event_items.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:weightSum="1"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:id="@+id/eventLayout"
+    >
 
     <com.ymca.CustomFont.PrimaryFontText
         android:layout_width="match_parent"
@@ -15,7 +17,7 @@
         android:text="XXX XXXX XXXXXX"
         android:textColor="@android:color/black"
         android:background="@drawable/classes_bg"
-        android:id="@+id/textView2"
+        android:id="@+id/eventName"
         android:textSize="@dimen/text_size_common_16"/>
 
     <LinearLayout
@@ -34,6 +36,7 @@
         >
 
         <com.ymca.CustomFont.PrimaryFontText
+            android:id="@+id/eventDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -44,6 +47,7 @@
             app:fontName="@string/custom_primary_font"/>
 
         <com.ymca.CustomFont.SecondaryFontText
+            android:id="@+id/eventMonth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -62,6 +66,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/textView2" />
+        android:layout_alignBottom="@+id/eventName" />
 
 </RelativeLayout>
