--- a/app/src/main/res/layout/instructor_detail_fragment.xml
+++ b/app/src/main/res/layout/instructor_detail_fragment.xml
@@ -6,11 +6,7 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bottom_img" />
+
 
     <LinearLayout
         android:id="@+id/circleInstructorLay"
@@ -23,27 +19,36 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".02"
+            android:layout_weight=".03"
             android:background="@color/colorPrimary" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".97"
+            android:layout_weight=".95"
             android:gravity="center">
+
+            <ImageView
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/img_box" />
 
             <com.ymca.CustomFont.RoundedImage
                 android:id="@+id/circleInstructorImg"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:scaleType="fitCenter"
-                android:src="@drawable/blog_icon" />
-        </LinearLayout>
+                android:src="@drawable/cancel_bt" />
+
+        </RelativeLayout>
 
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".02"
+            android:layout_weight=".03"
             android:background="@color/colorPrimary" />
     </LinearLayout>
 
@@ -60,93 +65,101 @@
         android:textStyle="bold"
         app:fontNames="@string/custom_primary_font" />
 
-    <com.ymca.CustomFont.PrimaryFontText
-
-        android:id="@+id/expTag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/instructorName"
-        android:background="@drawable/classes_short_bg"
-        android:drawableLeft="@drawable/arrow_gray"
-        android:drawablePadding="@dimen/padding_common_5"
-        android:gravity="center_vertical"
-        android:padding="@dimen/padding_common_5"
-        android:text="@string/ecperience"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/margin_common_16"
-        android:textStyle="bold"
-        app:fontNames="@string/custom_primary_font" />
-
-    <LinearLayout
-        android:id="@+id/experienceLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/expTag"
-        android:orientation="vertical">
-
-    </LinearLayout>
-
-    <com.ymca.CustomFont.PrimaryFontText
-
-        android:id="@+id/certificationTag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/experienceLayout"
-        android:background="@drawable/classes_short_bg"
-        android:drawableLeft="@drawable/arrow_gray"
-        android:drawablePadding="@dimen/padding_common_5"
-        android:gravity="center_vertical"
-        android:padding="@dimen/padding_common_5"
-        android:text="@string/certification"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/margin_common_16"
-        android:textStyle="bold"
-        app:fontNames="@string/custom_primary_font" />
-
     <ScrollView
-        android:id="@+id/certificateLayoutScroll"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_below="@+id/certificationTag">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/instructorName">
 
         <LinearLayout
-            android:id="@+id/certificateLayout"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
+            <com.ymca.CustomFont.PrimaryFontText
+
+                android:id="@+id/expTag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/classes_short_bg"
+                android:drawableLeft="@drawable/instructor_detail_arrow"
+                android:drawablePadding="@dimen/padding_common_5"
+                android:gravity="center_vertical"
+                android:padding="@dimen/padding_common_5"
+                android:text="@string/ecperience"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/margin_common_16"
+                android:textStyle="bold"
+                app:fontNames="@string/custom_primary_font" />
+
+            <LinearLayout
+                android:id="@+id/experienceLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/expTag"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
+            <com.ymca.CustomFont.PrimaryFontText
+
+                android:id="@+id/certificationTag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/experienceLayout"
+                android:background="@drawable/classes_short_bg"
+                android:drawableLeft="@drawable/instructor_detail_arrow"
+                android:drawablePadding="@dimen/padding_common_5"
+                android:gravity="center_vertical"
+                android:padding="@dimen/padding_common_5"
+                android:text="@string/certification"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/margin_common_16"
+                android:textStyle="bold"
+                app:fontNames="@string/custom_primary_font" />
+
+
+            <LinearLayout
+                android:id="@+id/certificateLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/certificationTag"
+                android:orientation="horizontal">
+
+
+            </LinearLayout>
+
+            <com.ymca.CustomFont.PrimaryFontText
+
+                android:id="@+id/funFactTag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/certificateLayoutScroll"
+                android:background="@drawable/classes_short_bg"
+                android:drawableLeft="@drawable/instructor_detail_arrow"
+                android:drawablePadding="@dimen/padding_common_5"
+                android:gravity="center_vertical"
+                android:padding="@dimen/padding_common_5"
+                android:text="@string/fun"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/margin_common_16"
+                android:textStyle="bold"
+                app:fontNames="@string/custom_primary_font" />
+
+            <LinearLayout
+                android:id="@+id/funFactLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/certificationTag"
+                android:orientation="horizontal">
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
-    <com.ymca.CustomFont.PrimaryFontText
-
-        android:id="@+id/funFactTag"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/certificateLayoutScroll"
-        android:background="@drawable/classes_short_bg"
-        android:drawableLeft="@drawable/arrow_gray"
-        android:drawablePadding="@dimen/padding_common_5"
-        android:gravity="center_vertical"
-        android:padding="@dimen/padding_common_5"
-        android:text="@string/fun"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/margin_common_16"
-        android:textStyle="bold"
-        app:fontNames="@string/custom_primary_font" />
-
-    <LinearLayout
-        android:id="@+id/funFactLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/certificationTag"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
     <View
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".02"
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_img" />
 </RelativeLayout>
