--- a/app/src/main/res/layout/instructor_fragment.xml
+++ b/app/src/main/res/layout/instructor_fragment.xml
@@ -22,13 +22,15 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".98"
+        android:layout_weight=".97"
+        android:scrollbars="none"
+        android:scrollbarStyle="insideOverlay"
         />
 
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".02"
+        android:layout_weight=".03"
         android:background="@drawable/bottom_img" />
 </LinearLayout>
