--- a/app/src/main/res/layout/instructor_items.xml
+++ b/app/src/main/res/layout/instructor_items.xml
@@ -3,14 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_common_5"
+    android:layout_marginLeft="@dimen/margin_common_10"
+    android:layout_marginRight="@dimen/margin_common_10"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="wrap_content"
