--- a/app/src/main/res/layout/my_card_items.xml
+++ b/app/src/main/res/layout/my_card_items.xml
@@ -5,13 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:weightSum="1"
-    android:focusable="false">
+    android:focusable="false"
+    android:padding="@dimen/padding_common_5">
 
     <ImageView
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
         android:layout_weight=".2"
-        android:src="@drawable/arrow_next"
+        android:src="@drawable/card_holder_new"
         android:focusable="false"/>
 
     <LinearLayout
@@ -20,14 +21,14 @@
         android:layout_weight=".8"
         android:background="@drawable/classes_bg"
         android:orientation="vertical"
-        android:padding="@dimen/padding_common_8"
+        android:padding="@dimen/padding_common_2"
         android:gravity="center_vertical"
         android:weightSum="1">
 
         <com.ymca.CustomFont.PrimaryFontText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/dot_blue"
+            android:drawableLeft="@drawable/user_default"
             android:text="XXXXX"
             android:textAllCaps="true"
             android:textColor="@color/colorScheduleBottomUnSelect"
