--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <!--<include layout="@layout/custom__back_button_actionbar"/>-->
     <com.ymca.CustomFont.PrimaryFontText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:padding="@dimen/padding_common_10"
         android:text="@string/announcement"
         android:textAllCaps="true"
-        android:gravity="center_vertical"
         android:textColor="@color/colorScheduleBottomUnSelect"
         android:textSize="@dimen/text_size_common_22"
         android:textStyle="bold"
-        app:fontName="@string/custom_primary_font"/>
+        app:fontName="@string/custom_primary_font" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/notificationList"
-        android:dividerHeight="1dp"
-        android:divider="@color/colorGray"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".97"
+        android:divider="@color/colorGray"
+        android:dividerHeight="1dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".03"
+        android:background="@drawable/bottom_img" />
 
 </LinearLayout>
