--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorGray">#BCBEC0</color>
     <color name="colorTextGray">#8A8A8C</color>
     <color name="colorTextGreeen">#51B100</color>
+    <color name="colorTextRed">#F73204</color>
 </resources>
