Functionality : Custom calender with custom events , add map on event location click.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,8 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@drawable/bg_leftmenu"
-        android:orientation="vertical"
-        android:paddingRight="@dimen/padding_common_5">
+        android:orientation="vertical">
 
         <ListView
             android:id="@+id/left_drawer"
