--- a/app/src/main/res/layout/add_my_card_fragment.xml
+++ b/app/src/main/res/layout/add_my_card_fragment.xml
@@ -28,7 +28,7 @@
                 android:layout_weight=".1"
                 android:background="@null"
                 android:gravity="center"
-                android:hint="@string/member_name"
+                android:hint="@string/card_name"
                 android:padding="@dimen/padding_common_8"
                 android:textColor="@android:color/black"
                 android:textColorHint="@color/colorTextGray"
