--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/titleIcon"
-        android:layout_width="35dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:src="@mipmap/nav_home"
 
