--- a/app/src/main/res/layout/facility_item.xml
+++ b/app/src/main/res/layout/facility_item.xml
@@ -57,23 +57,15 @@
             android:src="@drawable/event_forwd_aarow"
             android:focusable="false"
             android:orientation="horizontal"
-            android:gravity="bottom">
+            android:gravity="center_vertical"
+            >
             <ImageView
-                android:layout_width="15dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/icon_lock"
+                android:background="@mipmap/close"
                 android:id="@+id/statusImg"
                 />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Close"
-                android:gravity="bottom"
-                android:textSize="@dimen/text_size_common_16"
-                android:textColor="@color/colorTextRed"
-                android:paddingLeft="@dimen/padding_common_5"
-                android:id="@+id/statusText"
-                />
+
 
             </LinearLayout>
     </LinearLayout>
