--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,12 +5,32 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <com.ymca.ViewPager.AutoScrollViewPager
-        android:id="@+id/pager"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".48"
-        android:background="@drawable/slider_img"/>
+        android:layout_weight=".48">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" >
+
+            <include layout="@layout/footer_view" />
+        </LinearLayout>
+    </RelativeLayout>
+    <!--<com.ymca.ViewPager.AutoScrollViewPager-->
+        <!--android:id="@+id/pager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight=".48"-->
+        <!--android:background="@drawable/slider_img"/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
